--- a/ContribSentry.Sample/ContribSentry.Sample/ContribSentry.Sample.csproj
+++ b/ContribSentry.Sample/ContribSentry.Sample/ContribSentry.Sample.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Disco.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
