--- a/Samples/Sentry.Xamarin.Sample.Android/Sentry.Xamarin.Android.csproj
+++ b/Samples/Sentry.Xamarin.Sample.Android/Sentry.Xamarin.Android.csproj
@@ -7,7 +7,7 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Sentry.Xamarin.Sample.Droid</RootNamespace>
+    <RootNamespace>Sentry.Xamarin.Sample.Android</RootNamespace>
     <AssemblyName>Sentry.Xamarin.Sample.Android</AssemblyName>
     <Deterministic>True</Deterministic>
     <AndroidApplication>True</AndroidApplication>
@@ -97,8 +97,8 @@
       <Project>{6a3a0d77-c494-4122-8bb5-74859563bc86}</Project>
       <Name>Sentry.Xamarin.Forms</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Sentry.Xamarin.Sample\Sentry.Xamarin.Sample.csproj">
-      <Project>{5E8E026B-CC24-4E22-9D24-D0A2E8457C97}</Project>
+    <ProjectReference Include="..\ContribSentry.Sample\Sentry.Xamarin.Sample.csproj">
+      <Project>{9F09FB9D-01D6-4D37-B1F9-194A34BF1A40}</Project>
       <Name>Sentry.Xamarin.Sample</Name>
     </ProjectReference>
   </ItemGroup>
