--- a/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
+++ b/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
@@ -5,7 +5,7 @@
 		<NoWarn Condition="$(TargetFramework) == 'netstandard2.0'">$(NoWarn);RS0017</NoWarn>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Lucas Zimerman</Authors>
-		<Company>Lucas ZimermanLucas Zimerman</Company>
+		<Company>Lucas Zimerman</Company>
 		<Description>Enhances the support of Sentry.NET SDK with Xamarin Forms/Android/IOS Apps.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 <!--		<IncludeSymbols>true</IncludeSymbols> -->
