--- a/Samples/Sentry.Xamarin.Sample.Android/Sentry.Xamarin.Android.csproj
+++ b/Samples/Sentry.Xamarin.Sample.Android/Sentry.Xamarin.Android.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.0.0.9</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
