--- a/Samples/Sentry.Xamarin.Sample.iOS/Sentry.Xamarin.iOS.csproj
+++ b/Samples/Sentry.Xamarin.Sample.iOS/Sentry.Xamarin.iOS.csproj
@@ -123,6 +123,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.0.0.9</Version>
+    </PackageReference>
     <PackageReference Include="Sentry">
       <Version>2.1.8</Version>
     </PackageReference>
