--- a/Samples/Sentry.Xamarin.Sample/Sentry.Xamarin.Sample.csproj
+++ b/Samples/Sentry.Xamarin.Sample/Sentry.Xamarin.Sample.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.9" />
     <PackageReference Include="Sentry" Version="2.1.8" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
@@ -18,6 +19,9 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Disco.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\PopupPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
