--- a/Samples/Sentry.Xamarin.Sample/Sentry.Xamarin.Sample.csproj
+++ b/Samples/Sentry.Xamarin.Sample/Sentry.Xamarin.Sample.csproj
@@ -18,10 +18,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\AboutPopupPage.xaml.cs">
+      <DependentUpon>AboutPopupPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Disco.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\PopupPage.xaml">
+    <EmbeddedResource Update="Views\About2PopupPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\AboutPopupPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
