--- a/Samples/Sentry.Xamarin.Sample.iOS/Sentry.Xamarin.iOS.csproj
+++ b/Samples/Sentry.Xamarin.Sample.iOS/Sentry.Xamarin.iOS.csproj
@@ -123,8 +123,11 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.0.0.9</Version>
+    </PackageReference>
     <PackageReference Include="Sentry">
-      <Version>2.1.8</Version>
+      <Version>3.0.0-alpha.6</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
