--- a/Samples/Sentry.Xamarin.Sample/Sentry.Xamarin.Sample.csproj
+++ b/Samples/Sentry.Xamarin.Sample/Sentry.Xamarin.Sample.csproj
@@ -11,13 +11,29 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Sentry" Version="2.1.8" />
+    <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.9" />
+    <PackageReference Include="Sentry" Version="3.0.0-alpha.6" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="XamlPageWithIssue.xaml.cs">
+      <DependentUpon>XamlPageWithIssue.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\AboutPopupPage.xaml.cs">
+      <DependentUpon>AboutPopupPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Disco.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\About2PopupPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\AboutPopupPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
