--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,5 +20,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: nuget/setup-nuget@v1
       - run: nuget restore Sentry.Xamarin.sln
+      - uses: microsoft/setup-msbuild@v1.0.2
+        if: matrix.os == 'windows-latest'
       - name: Build with MSBuild
         run: msbuild Sentry.Xamarin.sln -p:Configuration=Release
