--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,6 +5,8 @@ on:
       - 'v*.*.*'
     branches:
       - main
+      - release/*
+
   pull_request:
 jobs:
   build:
@@ -24,3 +26,8 @@ jobs:
         if: matrix.os == 'windows-latest'
       - name: Build with MSBuild
         run: msbuild Sentry.Xamarin.sln -p:Configuration=Release
+      - name: Build iOS Sample app
+        run: msbuild Samples/Sentry.Xamarin.Sample.iOS/Sentry.Xamarin.iOS.csproj
+        if: matrix.os == 'macos-latest'
+      - name: Build Android Sample app
+        run: msbuild Samples/Sentry.Xamarin.Sample.Android/Sentry.Xamarin.Android.csproj
