--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,3 +31,9 @@ jobs:
         if: matrix.os == 'macos-latest'
       - name: Build Android Sample app
         run: msbuild Samples/Sentry.Xamarin.Sample.Android/Sentry.Xamarin.Android.csproj
+      - name: Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: Sentry.Xamarin.Forms.1.0.0.nupkg
+          path: |
+            ${{ github.workspace }}/Sentry.Xamarin.Forms/bin/Release/Sentry.Xamarin.Forms.1.0.0.nupkg
