--- a/Samples/Sentry.Xamarin.Sample.iOS/Info.plist
+++ b/Samples/Sentry.Xamarin.Sample.iOS/Info.plist
@@ -31,7 +31,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
-	<string>ContribSentry.Sample</string>
+	<string>Sentry.Xamarin.Sample</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
