--- a/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
+++ b/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 <!--!<EnableDefaultCompileItems>False</EnableDefaultCompileItems>-->
 		<TargetFrameworks>netstandard2.0;monoandroid10.0;Xamarinios10;</TargetFrameworks>
+		<TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">$(TargetFrameworks);uap10.0.16299;</TargetFrameworks>
 		<NoWarn Condition="$(TargetFramework) == 'netstandard2.0'">$(NoWarn);RS0017</NoWarn>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Lucas Zimerman</Authors>
@@ -16,10 +17,12 @@
 		<Compile Remove="Internals\*.netstandard.cs" />
 		<Compile Remove="Internals\*.ios.cs" />
 		<Compile Remove="Internals\*.droid.cs" />
-		
+		<Compile Remove="Internals\*.uwp.cs" />
+
 		<None Include="Internals\*.netstandard.cs" />
 		<None Include="Internals\*.ios.cs" />
 		<None Include="Internals\*.droid.cs" />
+		<None Include="Internals\*.uwp.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -34,6 +37,11 @@
 
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
 		<Compile Include="Internals\*.droid.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="$(TargetFramework.StartsWith('uap'))">
+		<Compile Include="Internals\*.uwp.cs" />
+		<PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.9" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) ">
