--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,6 +38,8 @@ jobs:
       - name: Build UWP Test Project
         run: msbuild Tests/Sentry.Xamarin.Forms.Tests.UWP/Sentry.Xamarin.Forms.Tests.UWP.csproj /p:Platform=x64 /p:Configuration=Release
         if: matrix.os == 'windows-latest'
+      - name: Setup VS Test
+        uses: darenm/Setup-VSTest@v1
       - name: Run UWP Test Project
         run: vstest.console.exe /Platform:x64 Sentry.Xamarin.Forms.Tests.UWP_1.0.0.0_x64_Test\Sentry.Xamarin.Forms.Tests.UWP_1.0.0.0_x64.appx
         if: matrix.os == 'windows-latest'
