--- a/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
+++ b/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
@@ -1,9 +1,20 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras/2.0.41">
+  <Import Project="Directory.Build.props" />
 	<PropertyGroup>
-<!--!<EnableDefaultCompileItems>False</EnableDefaultCompileItems>-->
+	    <!--Generate xml docs for all projects under 'src'-->
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	
 		<TargetFrameworks>netstandard2.0;monoandroid10.0;Xamarinios10;</TargetFrameworks>
 		<TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">$(TargetFrameworks);uap10.0.16299;</TargetFrameworks>
 		<NoWarn Condition="$(TargetFramework) == 'netstandard2.0'">$(NoWarn);RS0017</NoWarn>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		
+		<PackageId>Sentry.Xamarin.Forms</PackageId>
+		<AssemblyName>Sentry.Xamarin.Forms</AssemblyName>
+		<RootNamespace>Sentry</RootNamespace>
+		<Description>Official Sentry SDK for Xamarin Forms - Open-source error tracking that helps developers monitor and fix crashes in real time.</Description>
+
+		<_WriteTelemetryProperties>false</_WriteTelemetryProperties>
 	</PropertyGroup>
 	<ItemGroup>		
 		<Compile Remove="Internals\*.netstandard.cs" />
