GH actions artifact

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,6 +44,9 @@ jobs:
       - name: Artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: Sentry.Xamarin.Forms.nupkg
+          name: Package
           path: |
-            ${{ github.workspace }}/Sentry.Xamarin.Forms/bin/Release/Sentry.Xamarin.Forms.*nupkg
+            ${{ github.workspace }}/Sentry.Xamarin.Forms/bin/Release/Sentry.Xamarin.Forms.*.nupkg
+          name: Symbols
+          path: |
+            ${{ github.workspace }}/Sentry.Xamarin.Forms/bin/Release/Sentry.Xamarin.Forms.*.snupkg
