--- a/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
+++ b/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
@@ -15,7 +15,21 @@
 		<Description>Official Sentry SDK for Xamarin Forms - Open-source error tracking that helps developers monitor and fix crashes in real time.</Description>
 
 		<_WriteTelemetryProperties>false</_WriteTelemetryProperties>
+		<DefineConstants>$(AdditionalConstants)</DefineConstants>
 	</PropertyGroup>
+
+	<PropertyGroup Condition=" $(TargetFramework.StartsWith('Xamarinios')) ">
+		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR;NATIVE_INTEGRATION</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
+		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR;NATIVE_INTEGRATION</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="$(TargetFramework.StartsWith('uap'))">
+		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR;NATIVE_INTEGRATION</DefineConstants>
+	</PropertyGroup>	
+	
 	<ItemGroup>		
 		<Compile Remove="Internals\*.netstandard.cs" />
 		<Compile Remove="Internals\*.ios.cs" />
