--- a/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
+++ b/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
@@ -15,7 +15,21 @@
 		<Description>Official Sentry SDK for Xamarin Forms - Open-source error tracking that helps developers monitor and fix crashes in real time.</Description>
 
 		<_WriteTelemetryProperties>false</_WriteTelemetryProperties>
+		<DefineConstants>$(AdditionalConstants)</DefineConstants>
 	</PropertyGroup>
+
+	<PropertyGroup Condition=" $(TargetFramework.StartsWith('Xamarinios')) ">
+		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
+		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="$(TargetFramework.StartsWith('uap'))">
+		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR</DefineConstants>
+	</PropertyGroup>	
+	
 	<ItemGroup>		
 		<Compile Remove="Internals\*.netstandard.cs" />
 		<Compile Remove="Internals\*.ios.cs" />
@@ -27,7 +41,7 @@
 		<None Include="Internals\*.droid.cs" />
 		<None Include="Internals\*.uwp.cs" />
 	</ItemGroup>
-
+	
 	<ItemGroup>
 		<PackageReference Include="Sentry" Version="3.0.0-alpha.6" />
 		<PackageReference Include="Xamarin.Essentials" Version="1.4.0" />
