Split Xamarin and Xamarin.Forms code.

--- a/Samples/Sample.Xamarin.Core/Sample.Xamarin.Core.csproj
+++ b/Samples/Sample.Xamarin.Core/Sample.Xamarin.Core.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Sentry.Xamarin.Forms\Sentry.Xamarin.Forms.csproj" />
+    <ProjectReference Include="..\..\Src\Sentry.Xamarin.Forms\Sentry.Xamarin.Forms.csproj" />
   </ItemGroup>
 
   <ItemGroup>
