--- a/Src/Sentry.Xamarin.Forms/Directory.Build.props
+++ b/Src/Sentry.Xamarin.Forms/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
   <!--Automatic upward search ends when first file found. From here we need to manually import parent props/targets
         https://docs.microsoft.com/en-us/visualstudio/msbuild/customize-your-build -->
-  <Import Project="..\Directory.Build.props" />
+  <Import Project="..\..\Directory.Build.props" />
 
   <PropertyGroup>
     <!--Generate xml docs for all projects under 'src'-->
@@ -14,7 +14,7 @@
     <Company>Sentry.io</Company>
     <Product>Sentry.Xamarin.Forms</Product>
 
-    <PackageTags>Sentry;GetSentry;Xamarin.Forms;Error-Reporting;Crash-Reporting;Exception-Handling</PackageTags>
+    <PackageTags>Sentry;GetSentry;Xamarin;Xamarin.Android;Xamarin.iOS;Xamarin.Forms;Error-Reporting;Crash-Reporting;Exception-Handling</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryRoot>$(MSBuildThisFileDirectory)</RepositoryRoot>
     <RepositoryUrl>https://github.com/getsentry/sentry-dotnet-xamarin</RepositoryUrl>
@@ -39,7 +39,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="../.assets/sentry-nuget.png" Pack="true" PackagePath=""/>
+    <None Include="../../.assets/sentry-nuget.png" Pack="true" PackagePath=""/>
   </ItemGroup>
 
   <ItemGroup>
