--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -9,8 +9,8 @@
 		<NoWarn Condition="$(TargetFramework) == 'netstandard2.0'">$(NoWarn);RS0017</NoWarn>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		
-		<PackageId>Sentry.Xamarin.Forms</PackageId>
-		<AssemblyName>Sentry.Xamarin.Forms</AssemblyName>
+		<PackageId>Sentry.Xamarin</PackageId>
+		<AssemblyName>Sentry.Xamarin</AssemblyName>
 		<RootNamespace>Sentry</RootNamespace>
 		<Description>Official Sentry SDK for Xamarin Forms - Open-source error tracking that helps developers monitor and fix crashes in real time.</Description>
 
@@ -43,9 +43,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Sentry" Version="3.0.0-alpha.9" />
 		<PackageReference Include="Xamarin.Essentials" Version="1.4.0" />
-		<PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarinios')) ">
