--- a/Tests/Sentry.Xamarin.Forms.Tests.UWP/Sentry.Xamarin.Forms.Tests.UWP.csproj
+++ b/Tests/Sentry.Xamarin.Forms.Tests.UWP/Sentry.Xamarin.Forms.Tests.UWP.csproj
@@ -175,7 +175,16 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Src\Sentry.Xamarin.Forms\Sentry.Xamarin.Forms.csproj">
+      <Project>{145c0011-638b-4de5-81ba-f1f9f0901037}</Project>
+      <Name>Sentry.Xamarin.Forms</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Src\Sentry.Xamarin\Sentry.Xamarin.csproj">
+      <Project>{c911dd4b-bcdc-4d76-83d1-dc40379df816}</Project>
+      <Name>Sentry.Xamarin</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
