--- a/Src/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
+++ b/Src/Sentry.Xamarin.Forms/Sentry.Xamarin.Forms.csproj
@@ -1,12 +1,30 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="MSBuild.Sdk.Extras/2.0.41">
+	<Import Project="Directory.Build.props" />
+	
+	<PropertyGroup>
+		<!--Generate xml docs for all projects under 'src'-->
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+		<TargetFrameworks>netstandard2.0;</TargetFrameworks>
+		<NoWarn Condition="$(TargetFramework) == 'netstandard2.0'">$(NoWarn);RS0017</NoWarn>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
+		<PackageId>Sentry.Xamarin.Forms</PackageId>
+		<AssemblyName>Sentry.Xamarin.Forms</AssemblyName>
+		<RootNamespace>Sentry</RootNamespace>
+		<Description>Official Sentry SDK for Xamarin Forms - Open-source error tracking that helps developers monitor and fix crashes in real time.</Description>
+
+		<_WriteTelemetryProperties>false</_WriteTelemetryProperties>
+		<DefineConstants>$(AdditionalConstants)</DefineConstants>
+	</PropertyGroup>
 	
   <ItemGroup>
     <ProjectReference Include="..\Sentry.Xamarin\Sentry.Xamarin.csproj" />
 	<PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
   </ItemGroup>
-
+	
+  <ItemGroup Condition="$(TargetFramework.StartsWith('uap'))">
+    <Compile Include="Internals\*.uwp.cs" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.9" />
+  </ItemGroup>
 </Project>
