--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -12,7 +12,7 @@
 		<PackageId>Sentry.Xamarin</PackageId>
 		<AssemblyName>Sentry.Xamarin</AssemblyName>
 		<RootNamespace>Sentry</RootNamespace>
-		<Description>Official Sentry SDK for Xamarin Forms - Open-source error tracking that helps developers monitor and fix crashes in real time.</Description>
+		<Description>Official Sentry SDK for Xamarin - Open-source error tracking that helps developers monitor and fix crashes in real time.</Description>
 
 		<_WriteTelemetryProperties>false</_WriteTelemetryProperties>
 		<DefineConstants>$(AdditionalConstants)</DefineConstants>
