--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,10 +46,10 @@ jobs:
         with:
           name: Package
           path: |
-            ${{ github.workspace }}/Sentry.Xamarin.Forms/bin/Release/Sentry.Xamarin.Forms.*.nupkg
+            ${{ github.workspace }}/src/**/Release/*.nupkg
       - name: Artifacts
         uses: actions/upload-artifact@v2
         with:
           name: Symbols
           path: |
-            ${{ github.workspace }}/Sentry.Xamarin.Forms/bin/Release/Sentry.Xamarin.Forms.*.snupkg
+            ${{ github.workspace }}/src/**/Release/*.snupkg
