--- a/Samples/Sample.Xamarin.Core/Sample.Xamarin.Core.csproj
+++ b/Samples/Sample.Xamarin.Core/Sample.Xamarin.Core.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <Import Project="Directory.Build.props" />
+	
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
@@ -12,7 +13,6 @@
 
   <ItemGroup>
     <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.9" />
-    <PackageReference Include="Sentry" Version="3.0.0-alpha.10" />
     <PackageReference Include="Xamanimation" Version="1.3.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
